[package]
name = "generator"
version = "0.1.0"
authors = ["duckvador"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = {version="1.0",features=["full","visit-mut","extra-traits"]}
quote = "1.0"
proc-macro2 = "1.0"
bae = "0.1.7"

[lib]
proc-macro = true
