[package]
name = "gentian"
version = "0.1.5"
authors = ["darsvador"]
edition = "2018"
exclude = [	"images/*" , "cfg_state.dot", "state_machines.rs"]
readme = "./README.md"
categories = ["asynchronous", "rust-patterns"]
repository = "https://github.com/darsvador/generator"
license-file = "LICENSE"
keywords = ["generator", "future", "proc-macro", "future"]
description = "gentian: a proc macro that transforms generators to state machines"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = {version="1.0",features=["full","visit-mut","extra-traits"]}
quote = "1.0"
proc-macro2 = "1.0"
bae = "0.1.7"

[lib]
proc-macro = true


